Renommage en AlineImporter (sauf Schemas et Import car en cours de modif)

--- a/config/module.ini
+++ b/config/module.ini
@@ -1,9 +1,9 @@
 [info]
-name         = "TestM"
+name         = "AlineImporter"
 version      = "1.0"
 author       = "AHP"
 configurable = true
-description  = "Test d’insertion de données."
+description  = "Import des données d’Aline dans Omeka-S."
 module_link  = "http://localhost/omeka-s/testm"
 author_link  = "http://localhost"
 
